--- a/src/index.css
+++ b/src/index.css
@@ -31,6 +31,8 @@ ul {
   transition: all 0.5s;
   position: relative;
   padding: 20px 50px;
+  font-weight: 800;
+  font-size: large;
 }
 
 .btn::before {
@@ -53,6 +55,7 @@ ul {
 .btn::after {
   content: '';
   position: absolute;
+  border-radius: 10px;
   top: 0;
   left: 0;
   width: 100%;
