--- a/src/index.css
+++ b/src/index.css
@@ -71,3 +71,52 @@ ul {
   opacity: 1;
   transform: scale(1, 1);
 }
+
+
+
+/* Common Hero Section */
+.hero-section {
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  height: 60vh;
+  position: relative;
+}
+
+.hero-section h1 {
+  font-size: 2.5rem;
+
+}
+
+.hero-section p {
+  font-size: 1.4rem;
+  text-align: center;
+}
+
+.hero-section::before {
+  content: '';
+  background-image: url('https://i.ibb.co/bbr8qLM/blake-connally-IKUYGCFmfw4-unsplash.jpg');
+  background-size: cover;
+  background-position: center;
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+}
+
+.heading {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+@media screen and (max-width:640px) {
+  .hero-section h1 {
+    font-size: 1.5rem;
+
+  }
+}
