--- a/src/Components/ProjectsCard.css
+++ b/src/Components/ProjectsCard.css
@@ -18,7 +18,8 @@
 
 .projects-btn {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
+    align-items: flex-end;
     padding: 0.5rem 0;
 }
 
@@ -44,7 +45,9 @@
 }
 
 .projects-card img {
-    width: 100%;
+    width: 50%;
+    height: 200px;
+
 }
 
 
