--- a/src/Routes/ProjectDetails.css
+++ b/src/Routes/ProjectDetails.css
@@ -2,21 +2,38 @@
     background-color: rgba(0, 0, 0, 0.5);
 }
 
-.pro-imgs {
+.projects-container {
+    max-width: 1140px;
+    margin: 50px auto;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 40px;
-    width: 100%;
-    height: 10%;
+    padding-bottom: 5rem;
+
+
 }
 
+.links {
+    display: flex;
+    justify-content: space-around;
+    margin-bottom: 10px;
+    align-items: center;
 
+}
 
+.details {
+    margin: 20px auto;
+    padding: 20px 20px;
+}
+
+.projects-container img {
+    width: 100%;
+}
 
 .heros {
     width: 100%;
     background-color: rgba(0, 0, 0, 0.5);
-    height: 60vh;
+    height: 15vh;
     position: relative;
 }
 
@@ -56,5 +73,21 @@
     .heros h1 {
         font-size: 1.5rem;
 
+    }
+
+    .projects-container {
+        max-width: 1140px;
+        margin: auto;
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+    }
+}
+
+@media screen and (max-width:780px) {
+    .projects-container {
+        max-width: 1140px;
+        margin: auto;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
     }
 }
