--- a/src/Routes/ProjectDetails.css
+++ b/src/Routes/ProjectDetails.css
@@ -2,7 +2,7 @@
     background-color: rgba(0, 0, 0, 0.5);
 }
 
-.projects-container {
+.projects-imgs {
     max-width: 1140px;
     margin: 50px auto;
     display: grid;
@@ -26,7 +26,7 @@
     padding: 20px 20px;
 }
 
-.projects-container img {
+.projects-imgs img {
     width: 100%;
 }
 
@@ -75,16 +75,29 @@
 
     }
 
-    .projects-container {
+    .projects-imgs {
         max-width: 1140px;
         margin: auto;
         display: grid;
         grid-template-columns: repeat(1, 1fr);
     }
+
+    .links {
+        display: flex;
+        justify-content: space-between;
+        flex-direction: column;
+        margin: 10px;
+        align-items: center;
+
+    }
+
+    .links a {
+        margin: 10px auto;
+    }
 }
 
 @media screen and (max-width:780px) {
-    .projects-container {
+    .projects-imgs {
         max-width: 1140px;
         margin: auto;
         display: grid;
